--- a/_posts/2023-05-16-PQ-反擊中國經濟脅迫-g7將如何擬定策略.html
+++ b/_posts/2023-05-16-PQ-反擊中國經濟脅迫-g7將如何擬定策略.html
@@ -8,7 +8,7 @@ tags: blog
 author: 張東和
 ---
 
-<p>七大工業國集團（G7）即將在本（5）月 19～21 日於日本廣島舉行領袖峰會，在此領袖峰會前夕舉辦的 G7 財長會議，分別就領袖峰會的財政議程進行協調，其中一項就是面對中國的經濟脅迫提出具體措施。</p>
+<p><strong>七大工業國集團（G7）</strong>即將在本（5）月 19～21 日於日本廣島舉行領袖峰會，在此領袖峰會前夕舉辦的 G7 財長會議，分別就領袖峰會的財政議程進行協調，根據路透社獨家報導，G7 領袖峰會，其中一項重要議程，就是面對中國的<strong>「經濟脅迫」（Economic Coercion）</strong>提出具體措施。</p>
 
 
 
@@ -16,7 +16,7 @@ author: 張東和
 
 
 
-<p>早在財長會議之前， G7 各國外長和歐盟高級代表所發表的聯合公報當中，就已經提到了中國問題，並遭到中國的抗議。公報上特別點出「經濟脅迫」，不僅破壞了 G7 國家的共同利益，還威脅到國際社會的安全與穩定。強調必須採取反擊經濟脅迫的必要手段，並聯合新興、開發中國家，加強外交協作，改善對於經濟脅迫的評估、準備、嚇阻與應對。</p>
+<p> 5 月財長會議之前， G7 各國外長和歐盟高級代表 4 月所發表的聯合公報當中，就已經提到了中國問題，並遭到中國的抗議。公報上特別點出「經濟脅迫」，不僅破壞了 G7 國家的共同利益，還威脅到國際社會的安全與穩定。強調必須<strong>採取反擊經濟脅迫</strong>的必要手段，並<strong>聯合新興、開發中國家，加強外交協作</strong>，改善對於經濟脅迫的評估、準備、嚇阻與應對。</p>
 
 
 
@@ -28,11 +28,15 @@ author: 張東和
 
 
 
-<p>公報上也提到，各國要強化經濟韌性與安全，並反對非法或國家主導強行獲得關鍵技術與智慧財產。因為這些關鍵和新興技術，對於未來社會運作，將會產生變革性的效果。</p>
+<p>公報上也提到，各國要強化經濟韌性與安全，並反對非法或國家主導強行獲得關鍵技術與智慧財產。因為這些關鍵和新興技術，對於未來社會運作，將會產生變革性的效果。無庸置疑，以上這些都指向了中國，中國不只常用以商逼政的經濟脅迫手段壓迫台灣，也壓迫那些不合中國意志的國家，如我們熟知的澳洲和立陶宛。</p>
 
 
 
-<p>無庸置疑，以上這些都指向了中國，中國不只常用以商逼政的經濟脅迫手段壓迫台灣，也壓迫那些不合中國意志的國家，我們最近熟知的是澳洲和立陶宛。對此，美國華府智庫戰略暨國際研究中心（CSIS）於今（2023）年 3 月發表了一份報告《拒絕、轉移、嚇阻—反擊中國經濟脅迫》（Deny, Deflect, Deter : Countering China’s Economic Coercion），舉出自 2010 年以來，中國對日本、挪威、菲律賓、蒙古、韓國、澳洲、加拿大和立陶宛的 8 起經濟脅迫案例，並提出可能的反擊策略。</p>
+<p>美國參議員在今年（2023）2 月 提出一個「<strong>2023 反經濟脅迫法案</strong>」（Countering Economic Coercion Act of 2023）裡面清楚定義了何謂「<strong>經濟脅迫</strong>」，指的是<strong>外國的對手國，用不合理的限制、阻礙、操控貿易、外國援助、投資或商業所採取的行動、作為或威脅，意圖造成它國的經濟損害，以達到政治戰略目的或影響主權政治行動</strong>。</p>
+
+
+
+<p><br>對此，美國華府智庫戰略暨國際研究中心（<strong>CSIS</strong>）於今（2023）年 3 月發表了一份報告《<strong>拒絕、轉移、嚇阻—反擊中國經濟脅迫</strong>》（<strong>Deny, Deflect, Deter : Countering China’s Economic Coercion</strong>），舉出自 2010 年以來，中國對<strong>日本、挪威、菲律賓、蒙古、韓國、澳洲、加拿大和立陶宛</strong>等 <strong>8 國經濟脅迫案例</strong>，並提出可能的反擊策略。</p>
 
 
 
@@ -44,15 +48,19 @@ author: 張東和
 
 
 
-<p>這份報告首先提到面對經濟脅迫的「嚇阻」可分為拒止和報復，並且報告中揚棄了中國一貫的「嚇阻—報復」模式，因為中國就是那一個喜用一旦不合我意就採取報復手段的國家。但西方國家的民主同盟面對到中國如此的經濟脅迫，需要採取一個道德和外交上的制高點，所以報告中建議以「嚇阻—拒止」的方式，取代中國式的報復手段。而作為反擊策略的準則，要避免招致過激的報復手段，而間接傷害了經不起中國威嚇的脆弱國家，進一步破壞民主同盟之間必要的信任。</p>
+<p>這份報告首先提到面對經濟脅迫的「嚇阻」可分為拒止和報復，並且報告中<strong>揚棄了中國一貫的「嚇阻—報復」模式</strong>，因為中國就是那一個喜用一旦不合我意就採取報復手段的國家。但西方國家的民主同盟面對到中國如此的經濟脅迫，需要採取一個道德和外交上的制高點。</p>
 
 
 
-<p>「嚇阻—拒止」包含兩個要素，先發制人的「拒止」政策，強化脆弱經濟體抵抗中國經濟脅迫，並以反應式的「轉移」政策，提供針對性的救濟管道，加速市場調整，最小化政治與經濟壓力。</p>
+<p>所以，報告中建議以「<strong>嚇阻—拒止</strong>」的方式，取代中國式的報復手段。而作為反擊策略的準則，要避免招致過激的報復手段，而間接傷害了經不起中國威嚇的脆弱國家，進一步破壞民主同盟之間必要的信任。</p>
 
 
 
-<p>CSIS 為美國政府及其他 G7 國家，提供了拒止式嚇阻的制度性政策建議。台灣也是受到中國經濟脅迫的一員，以下的建議，也可供我們參考，不僅是為了預先了解 G7 最後的決定，台灣也應該預先做好準備，進行制度性的調整、接軌未來國際合作。</p>
+<p>「嚇阻—拒止」包含兩個要素，<strong>先發制人的「拒止」政策</strong>，強化脆弱經濟體抵抗中國經濟脅迫，並以<strong>反應式的「轉移」政策</strong>，提供救濟管道，加速市場調整，最小化政治與經濟壓力。</p>
+
+
+
+<p>CSIS 為美國政府及其他 G7 國家，提供了拒止式嚇阻的制度性政策建議。台灣也是受到中國經濟脅迫的一員，以下的建議，也可供我們參考，不僅是為了預先了解 G7 最後的決定，<strong>台灣也應該預先做好準備，進行制度性的調整、接軌未來國際合作</strong>。</p>
 
 
 
@@ -65,6 +73,10 @@ author: 張東和
 
 
 <p class="pqnote">報告還建議在受到脅迫後採取以下「轉移」步驟：<br><br>8. <strong>確認進行中經濟脅迫</strong>：根據具體案例，美國總統應有權決定什麼構成經濟脅迫行為。「反經濟脅迫委員會」將為總統提供建議以做出決定，而國會可以投贊成或反對票來否決總統的決定。<br><br>9. <strong>美國反脅迫機構的部署</strong>：一旦明顯確認中國經濟脅迫事件，「反經濟脅迫委員會」將經美國反脅迫機構授權下，向總統提供一套建議的救濟政策。「反經濟脅迫委員會」 要負責在確定可能的機會下，鼓勵受到經濟脅迫國家加速在關鍵技術和其他戰略領域與中國脫鉤。<br><br>10. <strong>支持向世界貿易組織（WTO）提起訴訟</strong>：只要有可能，美國應鼓勵被經濟脅迫所針對的國家向世貿組織提出對中國的訴訟，美國和其他 G7 成員則作為第三方簽署。這些訴訟不會自行解決問題，而是表明美國及其合作夥伴對中國的不滿。<br><br>11.<strong> 增強外交訊息傳遞</strong>：在美國進行拒止和轉移的努力中，需要運用強有力的公共外交。最好與其他 G7 國家協調，美國應該公開在建立韌性以抵禦中國經濟脅迫所做的努力，並向被經濟脅迫所針對的夥伴提供救濟，促使中國對經濟脅迫成功的可能性，進行新的評估。</p>
+
+
+
+<p>英國前首相特拉斯 ( Liz Truss ) 由台灣政府的邀請，於 5/17 在遠景基金會的邀請下，除了一貫地堅持自由民主價值對於國際社會的重要，俄羅斯對烏克蘭的入侵，讓我們需要記取教訓，一旦國際社會軟弱，中國會如法炮製，入侵台灣。<br><br>特拉斯演講後的問答，她被問到，如果她還是作為英國首相出席 G7 高峰會議，她會提出甚麼樣議題？她毫不猶豫地說：「<strong>中國經濟脅迫</strong>」。並提出，面對中國脅迫，應該成立更強力的「<strong>經濟北約</strong>」。當一國受到中國經濟脅迫，就等於對所有國家的脅迫，共同對中國採取嚇阻作為。</p>
 
 
 
