Update VOCUS 2023-05-18 patch

--- a/_posts/2023-03-05-VOCUS-俄烏戰爭一年總檢討-12-註解-政治體制對於戰爭勝敗的影響.html
+++ b/_posts/2023-03-05-VOCUS-俄烏戰爭一年總檢討-12-註解-政治體制對於戰爭勝敗的影響.html
@@ -41,8 +41,7 @@ author: 王立第二戰研所
 <ul>
   <li class="draft-block draft--li">在民主國家這種狀況被抓包，不是下架就能解決的</li>
 </ul>
-<div><iframe allowfullscreen src="https://www.youtube.com/embed/q9wYW1gNSkg"></div>
-<div class="draft-block draft--p left"></div>
+<div><iframe allowfullscreen src="https://www.youtube.com/embed/q9wYW1gNSkg"></iframe></div>
 <div class="draft-block draft--p left">飛機妥善率不佳、裝甲車抗彈能力不如預期，就是要求改善、限期改善，去伊拉克實戰發現新問題，繼續改善。有效的監督促使承包商不敢怠慢，政府官員可以護航特定廠商拿到開發權利，但無法讓打不準的飛彈變準，公開試射的成敗攤在國會面前，誰敢睜眼說瞎話。</div>
 <div class="draft-block draft--p left">台灣該明白清楚的，不是為了民主體制瞎護航，而是明白民主的優點在於制衡，以及有效監督。</div>
 <h3 class="draft-block draft--h3" name="header-ch5m5">真的船堅砲利？民主與獨裁的最大差異</h3>
