--- a/_posts/2023-05-16-VOCUS-金之國-水之國-你-妳最溫柔的謊言.html
+++ b/_posts/2023-05-16-VOCUS-金之國-水之國-你-妳最溫柔的謊言.html
@@ -48,4 +48,4 @@ author: 陸坡 (LUPO)
 <div class="draft-block draft--p left">和平這件事情，有時候需要你情我願，當雙方都願意放下武器擁抱和平，這樣狀況下兩方才能對等的談論平和，也才有化開誤會和解的可能。《金之國 水之國》動畫中男女主角所在的國度就是如此，國家需要一個契機讓其放下武器。</div>
 <div class="draft-block draft--p left">嘴砲也好、愛情也罷，終究動畫給了一個現實無法達到的童話，但也是許多人期許下的童話，在如今紛紛擾擾的世界裡，誰不期許多年之間的國仇恩怨有迎刃而解的一天？</div>
 <div class="draft-block draft--p left">雖然裡面的政治和國家之間非常兒戲且隨意，並沒有太厲害權謀和算計等。但作為一部動畫電影作品來說《金之國 水之國》那種平和所展現溫柔與兩國間化解恩怨的總總，才是故事的核心，更不用說在原作核心中的嫁娶就有著一些神話的意涵，可以說是一部國與國的童話故事。我會滿推薦家人跟孩子一起觀影，會有不錯的感受，大人不會覺得幼稚，小孩也非覺得無趣。一部闔家歡樂，國與國間的成人童話是我對《金之國 水之國》電影的評語。</div>
-<div><iframe allowfullscreen src="https://www.youtube.com/embed/u9LBFjy4l7w"></div>
+<div><iframe allowfullscreen src="https://www.youtube.com/embed/u9LBFjy4l7w"></iframe></div>
