--- a/_posts/2023-05-18-INMEDIA-個人作品展演-排隊的孩子-反思社會-畫家葉雯-不會說未來很黑暗-不過混沌.html
+++ b/_posts/2023-05-18-INMEDIA-個人作品展演-排隊的孩子-反思社會-畫家葉雯-不會說未來很黑暗-不過混沌.html
@@ -38,7 +38,7 @@ author: 獨媒報導
 <p><strong>自小喜歡畫畫 認比其他兒童快樂 </strong></p>
 <p>自小在村長大的葉雯，幼稚園開始已經喜歡畫畫，經常把作品送給老師和家人。家中的貓、狗、小鳥經常是她筆下的主角，偶爾亦胡亂拼湊不同手腳的怪獸。一直以來，她的家人都沒有給她甚麼壓力，支持她發展自己的興趣。葉雯坦言，自己的童年比其他人幸運。</p>
 <p>被問及是否打算生小孩時，她說正在考慮當中，始終藝術家收入不穩，她希望可以經濟上、身體上都承受到才決定生育。但假如她有小朋友，她說：「當然是放任式（管教）！因為我也是這樣成長。規矩來說禮貌上要有，但其他都不用了。」她說，童年是一個人有最大可能的時候，如果處處限制，會令這些創意消失，只懂得服從。</p>
-<p>有港人覺得「生仔就移民」，葉雯認為或者與教育制度有關。她提到自己遲些我有機會在中學，做駐留藝術家。有人跟她說，這些錢好好賺，「求其教得啦！」；她卻強調不是：「如果我們有機會，當然應該改寫這個故事。」</p>
+<p>有港人覺得「生仔就移民」，葉雯認為或者與教育制度有關。她提到自己遲些有機會在中學，做駐留藝術家。有人跟她說，這些錢好好賺，「求其教得啦！」；她卻強調不是：「如果我們有機會，當然應該改寫這個故事。」</p>
 <p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/70f8o4C439" title="〈繼續努力的小閣〉"><img src="https://live.staticflickr.com/65535/52904841029_02c252d94c_b.jpg" width="1024" alt="〈繼續努力的小閣〉" /></a><br /><em>作品《繼續努力的小閣》</em></p>
 <p><strong>互動遊戲裡觀眾不願排隊 葉雯：反映很多人希望發聲</strong></p>
 <p>觀眾看完之後，葉雯邀請他們拿起穿校服的人像印章，在畫紙上「排隊」，以完成互動藝術《印記旅程》。她憶述，展演開幕當日，本來畫紙中間有一條很整齊的隊，「但有一個人離開了（隊伍），之後就痴咗線！」如今，在畫紙上幾乎在不同角落都見到離群的人，也有不同形狀——有人搖來搖去、有人只得半個頭、有人簽名、有人直接用手指模蘸墨水……</p>
