--- a/_posts/2023-05-18-INMEDIA-港大擬配對本地及非本地生同宿-學生代表-問卷調查97-同學反對.html
+++ b/_posts/2023-05-18-INMEDIA-港大擬配對本地及非本地生同宿-學生代表-問卷調查97-同學反對.html
@@ -12,6 +12,7 @@ author: 獨媒報導
 <p><strong>學生對政策感愕然  指宿舍委員會會議未有正式表決</strong></p>
 <p>戚由康今早在商台節目提到，有早前出席港大宿舍委員會會議的學生代表稱無印象曾正式表決相關政策，將與校方會面商討。他指學生對該政策的反應「相當激烈」，並且感到愕然，指有早前出席港大宿舍委員會會議的學生代表稱無印象曾正式表決相關政策，與校方的說法即已在會上議決有異。</p>
 <p>港大現時的宿舍房間，由宿生會、舍堂辦公室協調分配。戚由康表示，不是所有舍堂政策均要經宿舍委員會表決才可執行，但如果先作表決，「程序上比較恰當」。他指校方昨日回覆查詢學生時就稱，該政策並非強制，只屬方向性，而分配房間及配對宿生的權力，就會轉由舍監負責。</p>
+<p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/Zj8J1r7sd4" title="無標題"><img src="https://live.staticflickr.com/65535/52905982032_44046dc9b8_b.jpg" width="1024" alt="無標題" /></a></p>
 <p><strong>學生代表：本地生較多活動至凌晨  同住會發生爭執</strong></p>
 <p>對於問卷結果就達97%表示反對，戚由康提到，學生對該政策感到反感，本地及非本地生的生活習慣有差異，前者參與較多活動至凌晨，不少非本地生則較早睡覺，同住難免會發生爭執：「就算係非本地生嘅角度，可能係講緊嚟自中國大陸嘅同學仔都未必真係咁想同本地生住埋同一間房。」他認為，學生志同道合、傾得埋，「自自然然會一齊玩」。</p>
 <p>學生將與校方會面商討，戚由康指港大一直欲推行該項政策，承認學生現時難以組織行動表達意見，尤其沒有學生會。</p>
