--- a/_posts/2023-05-17-INITIUM-早报-中国脱口秀演员仅因一句玩笑就遭北京警方立案调查-这会坐牢吗.html
+++ b/_posts/2023-05-17-INITIUM-早报-中国脱口秀演员仅因一句玩笑就遭北京警方立案调查-这会坐牢吗.html
@@ -12,7 +12,7 @@ author:
             <figcaption itemprop="caption">台上的麦克风。<span class="credit">摄：Getty Images</span></figcaption></figure><h3>中国脱口秀演员仅因一句玩笑就遭北京警方立案调查，这会坐牢吗？</h3>
 <p>中国脱口秀演员House仅仅因为在一次线下演出中，用“作风优良、能打胜仗”来形容捕猎能力卓越的流浪狗，就被指责“严重侮辱人民军队”，遭<a href="https://weibo.com/5556545776/N12AE3cqx">北京警方立案调查</a>。目前不确定他是否会为此负法律责任。</p>
 <p>另一名大连市的网民因对House被封杀感到不解，在网上说了一句“兵哥哥难道不都是🐶哥哥么”，也被当地警方<a href="https://mp.weixin.qq.com/s/Uq56H8z0qDOmYVfEwjAOIw">以发布“涉军人不当言论”为由采取了行政拘留</a>。</p>
-<p>还有很多网民对这件事的发展走向感到荒谬。有人批评，这是“因言获罪”。有人指出，演员原话是将狗比作人，不是将人比作狗，是用人来夸狗，不是用狗来骂人。也有人认为，演员显然是在“玩梗”，并非故意侮辱军人，顶多算是矢言，至于这么大动干戈吗？</p>
+<p>还有很多网民对这件事的发展走向感到荒谬。有人批评，这是“因言获罪”。有人指出，演员原话是将狗比作人，不是将人比作狗，是用人来夸狗，不是用狗来骂人。也有人认为，演员显然是在“玩梗”，并非故意侮辱军人，顶多算是失言，至于这么大动干戈吗？</p>
 <p>还有人指出，两个月前中国官方还在宣传“<a href="http://politics.people.com.cn/n1/2023/0309/c1001-32640662.html">始终把民营企业和民营企业家当作自己人</a>”，这次因为一句玩笑，就对House所在公司没收加罚款1500万人民币，并且暂停多地线下演出，这让其他民营企业作何感想？</p>
 <p>这场风波最初由一名北京的现场观众引起，他个人对House的表述不满，<a href="https://weibo.com/1856740242/N0rs03CHT">在微博上讲了出来</a>，认为这句话“侮辱了人民子弟兵”。两天后的5月15日，北京市文化执法总队称他们通过“网络巡查”发现了这件事，于是决定对相关公司立案调查。</p>
 <p><a href="https://mp.weixin.qq.com/s/CZS9pSIFZAUHcMKJq2mY7w">《北京日报》报导</a>了执法总队调查公司的消息后，House所在的笑果文化公司和他本人当天<a href="https://weibo.com/u/6154267705">立即道歉</a>，公司让House无限期停演并深刻反省。然而事件不但没有平息，反而愈演愈烈。</p>
