Update VOCUS 2023-05-22 patch

--- a/_posts/2023-05-19-VOCUS-神級收藏家-點石成金拍賣行.html
+++ b/_posts/2023-05-19-VOCUS-神級收藏家-點石成金拍賣行.html
@@ -48,4 +48,4 @@ author: 陸坡 (LUPO)
 <div class="draft-block draft--p left">《神級收藏家：點石成金拍賣行》每一集幾乎不會把拍賣過程撥完，為了吸引人進入下一集觀看結果，但幾乎都是一樣的手法有點逆，再加上都是以運動品為主，對於不懂運動商品的人，或是想看到更多不同拍賣的人會越來越覺得節目無聊。</div>
 <div class="draft-block draft--p left">但是還是有很多有趣的拍賣，例如寶可夢牌就是一點，還有名人的遺物和歌手樂團的私人物品。可以看出即便是次文化宅產物，也有他的歸屬價值。</div>
 <div class="draft-block draft--p left">我自己的感覺是因為一集時間不長集數不多，所以很多時候一下子就可以看完一集。原則上不會講太多細節，而是聚焦於發現商品挖掘客戶、談判講價、委託拍賣，拍賣會最後結果是賺是賠，有沒有到達預估的金額。這都是這個節目的樂趣，前提你對這樣的循環不會煩躁，那就可以享受拍賣數字變化與說服客戶割愛的緊張感。</div>
-<div><iframe allowfullscreen src="https://www.youtube.com/embed/twCa_m7CwhE"></div>
+<div><iframe allowfullscreen src="https://www.youtube.com/embed/twCa_m7CwhE"></iframe></div>
