--- a/_posts/2023-05-21-INITIUM-图书馆没有的-禁书-藏身在香港人家中书柜.html
+++ b/_posts/2023-05-21-INITIUM-图书馆没有的-禁书-藏身在香港人家中书柜.html
@@ -8,8 +8,9 @@ tags: blog
 author: 
 ---
 
-<p>「仍然安放在柜里、桌上和床底一角的书本，在短短几年之间突然成为了“禁书”。」</p><figure class="image" itemscope itemtype="https://schema.org/ImageObject"><a class="image" href="https://theinitium.com/article/20230522-photo-hongkong-books-removed-from-libraries/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2023/05/80c2c2692382469c95785adb81683ef9.jpg?imageView2/1/w/1080/h/721/format/jpg" alt="尊子《生抽香港》与《老抽香港》。摄：林振东/端传媒" itemprop="contentUrl" referrerpolicy="no-referrer"></a>
-            <figcaption itemprop="caption">尊子《生抽香港》与《老抽香港》。摄：林振东/端传媒<span class="credit"></span></figcaption></figure><p>香港政治漫画家尊子于《明报》的漫画专栏停刊后，传媒陆续发现公共图书馆已经下架不少涉及政治人物、学者和传媒人的书籍及馆藏。除了尊子的漫画集外，下架书还包括已故民主派元老司徒华、已故著名历史学家余英时、前立法会议员及大律师吴霭仪、资深传媒人区家麟和谭蕙芸等的著作，甚至涉及非政治性书籍。</p>
+<p>「仍然安放在柜里、桌上和床底一角的书本，在短短几年之间突然成为了“禁书”。」</p><figure class="image" itemscope itemtype="https://schema.org/ImageObject"><a class="image" href="https://theinitium.com/article/20230522-photo-hongkong-books-removed-from-libraries/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2023/05/80c2c2692382469c95785adb81683ef9.jpg?imageView2/1/w/1080/h/721/format/jpg" alt="尊子《生抽香港》与《老抽中国》。摄：林振东/端传媒" itemprop="contentUrl" referrerpolicy="no-referrer"></a>
+            <figcaption itemprop="caption">尊子《生抽香港》与《老抽中国》。摄：林振东/端传媒<span class="credit"></span></figcaption></figure><p><strong>（端传媒摄影组 记者郑淑华、李慧筠 发自新加坡）</strong></p>
+<p>香港政治漫画家尊子于《明报》的漫画专栏停刊后，传媒陆续发现公共图书馆已经下架不少涉及政治人物、学者和传媒人的书籍及馆藏。除了尊子的漫画集外，下架书还包括已故民主派元老司徒华、已故著名历史学家余英时、前立法会议员及大律师吴霭仪、资深传媒人区家麟和谭蕙芸等的著作，甚至涉及非政治性书籍。</p>
 <p>除部分书籍下架外，记者于5月21日在图书馆网页搜索司徒华、吴霭仪、区家麟、岭南大学文化研究系前客席副教授许宝强、中国大陆作家许知远等名字，均没有其著作的搜索结果。</p>
 <p>这是港区国安法实施近3年来，又一波图书馆下架潮，有声音质疑香港言论、创作自由再度收窄，与异见人士相关的读物逐渐在公众视野中消失。</p>
 <h2>多名政治人物著作被下架</h2>
@@ -40,6 +41,9 @@ author:
 <figure class="image" itemscope itemtype="https://schema.org/ImageObject"><a class="image" href="https://theinitium.com/article/20230522-photo-hongkong-books-removed-from-libraries/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2023/05/481b38d74c3d4b149bde1a6fa1dcae65.jpg?imageView2/1/w/1080/h/721/format/jpg" alt="谭蕙芸《文字欲：回应时代的特写新闻》。摄：林振东/端传媒" itemprop="contentUrl" referrerpolicy="no-referrer"></a>
 <figcaption itemprop="caption">谭蕙芸《文字欲：回应时代的特写新闻》。摄：林振东/端传媒</figcaption></figure>
 
+<figure class="image" itemscope itemtype="https://schema.org/ImageObject"><a class="image" href="https://theinitium.com/article/20230522-photo-hongkong-books-removed-from-libraries/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2023/05/c8d5c397ce2f45f3b9fb4248b21c7a13.jpg?imageView2/1/w/1080/h/721/format/jpg" alt="曾咏聪《戒和同修》。摄：林振东/端传媒" itemprop="contentUrl" referrerpolicy="no-referrer"></a>
+            <figcaption itemprop="caption">曾咏聪《戒和同修》。摄：林振东/端传媒</figcaption></figure>
+
 <figure class="image" itemscope itemtype="https://schema.org/ImageObject"><a class="image" href="https://theinitium.com/article/20230522-photo-hongkong-books-removed-from-libraries/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2023/05/d84be49c116940969aa80d6d087152a6.jpg?imageView2/1/w/1080/h/721/format/jpg" alt="马岳《香港80年代民主运动口述历史》。摄：林振东/端传媒 " itemprop="contentUrl" referrerpolicy="no-referrer"></a>
 <figcaption itemprop="caption">马岳《香港80年代民主运动口述历史》。摄：林振东/端传媒 </figcaption></figure>
 
@@ -52,8 +56,8 @@ author:
 <figure class="image" itemscope itemtype="https://schema.org/ImageObject"><a class="image" href="https://theinitium.com/article/20230522-photo-hongkong-books-removed-from-libraries/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2023/05/8e6734c3b66a450aaa2745d7fcd11618.jpg?imageView2/1/w/1080/h/721/format/jpg" alt="64名记者合著《人民不会忘记——八九民运实录》。摄：林振东/端传媒 " itemprop="contentUrl" referrerpolicy="no-referrer"></a>
 <figcaption itemprop="caption">64名记者合著《人民不会忘记——八九民运实录》。摄：林振东/端传媒 </figcaption></figure>
 
-<figure class="image" itemscope itemtype="https://schema.org/ImageObject"><a class="image" href="https://theinitium.com/article/20230522-photo-hongkong-books-removed-from-libraries/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2023/05/bef5d189b7254fd1b44a0ab09a2668ea.jpg?imageView2/1/w/1080/h/721/format/jpg" alt="许宝强《情感政治》。摄：林振东/端传媒" itemprop="contentUrl" referrerpolicy="no-referrer"></a>
-<figcaption itemprop="caption">许宝强《情感政治》。摄：林振东/端传媒</figcaption></figure>
+<figure class="image" itemscope itemtype="https://schema.org/ImageObject"><a class="image" href="https://theinitium.com/article/20230522-photo-hongkong-books-removed-from-libraries/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2023/05/1a14692e2c6a43679a4475f2e0156527.jpg?imageView2/1/w/1080/h/721/format/jpg" alt="钟祖康《来生不做中国人》。摄：林振东/端传媒" itemprop="contentUrl" referrerpolicy="no-referrer"></a>
+<figcaption itemprop="caption">钟祖康《来生不做中国人》。摄：林振东/端传媒</figcaption></figure>
 
 <figure class="image" itemscope itemtype="https://schema.org/ImageObject"><a class="image" href="https://theinitium.com/article/20230522-photo-hongkong-books-removed-from-libraries/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2023/05/29f4285a5f7f40c59ad2743a32f73169.jpg?imageView2/1/w/1080/h/721/format/jpg" alt="许知远《极权的诱惑》。摄：林振东/端传媒" itemprop="contentUrl" referrerpolicy="no-referrer"></a>
 <figcaption itemprop="caption">许知远《极权的诱惑》。摄：林振东/端传媒</figcaption></figure>
@@ -61,11 +65,17 @@ author:
 <figure class="image" itemscope itemtype="https://schema.org/ImageObject"><a class="image" href="https://theinitium.com/article/20230522-photo-hongkong-books-removed-from-libraries/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2023/05/82fe7227e3c84abfb2e48e67416e680b.jpg?imageView2/1/w/1080/h/721/format/jpg" alt="戴耀廷《宪政．中国》。摄：林振东/端传媒 " itemprop="contentUrl" referrerpolicy="no-referrer"></a>
 <figcaption itemprop="caption">戴耀廷《宪政．中国》。摄：林振东/端传媒 </figcaption></figure>
 
+<figure class="image" itemscope itemtype="https://schema.org/ImageObject"><a class="image" href="https://theinitium.com/article/20230522-photo-hongkong-books-removed-from-libraries/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2023/05/61a448417b524cc7950e80ed1295d4df.jpg?imageView2/1/w/1080/h/721/format/jpg" alt="陈健民《走向公民社会-中港的经验与挑战》。摄：林振东/端传媒" itemprop="contentUrl" referrerpolicy="no-referrer"></a>
+            <figcaption itemprop="caption">陈健民《走向公民社会-中港的经验与挑战》。摄：林振东/端传媒</figcaption></figure>
+
 <figure class="image" itemscope itemtype="https://schema.org/ImageObject"><a class="image" href="https://theinitium.com/article/20230522-photo-hongkong-books-removed-from-libraries/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2023/05/e0daa37294514a15813d8876ad70d8b3.jpg?imageView2/1/w/1080/h/721/format/jpg" alt="徐承恩《郁躁的城邦：香港民族源流史》 。摄：林振东/端传媒 " itemprop="contentUrl" referrerpolicy="no-referrer"></a>
 <figcaption itemprop="caption">徐承恩《郁躁的城邦：香港民族源流史》 。摄：林振东/端传媒 </figcaption></figure>
 
 <figure class="image" itemscope itemtype="https://schema.org/ImageObject"><a class="image" href="https://theinitium.com/article/20230522-photo-hongkong-books-removed-from-libraries/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2023/05/862648cb482e427eb32c3a82de4b14d9.jpg?imageView2/1/w/1080/h/721/format/jpg" alt="陈云《香港城邦论》。摄：林振东/端传媒" itemprop="contentUrl" referrerpolicy="no-referrer"></a>
 <figcaption itemprop="caption">陈云《香港城邦论》。摄：林振东/端传媒</figcaption></figure>
+
+<figure class="image" itemscope itemtype="https://schema.org/ImageObject"><a class="image" href="https://theinitium.com/article/20230522-photo-hongkong-books-removed-from-libraries/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2023/05/bef5d189b7254fd1b44a0ab09a2668ea.jpg?imageView2/1/w/1080/h/721/format/jpg" alt="许宝强《情感政治》。摄：林振东/端传媒" itemprop="contentUrl" referrerpolicy="no-referrer"></a>
+<figcaption itemprop="caption">许宝强《情感政治》。摄：林振东/端传媒</figcaption></figure>
 
 <figure class="image" itemscope itemtype="https://schema.org/ImageObject"><a class="image" href="https://theinitium.com/article/20230522-photo-hongkong-books-removed-from-libraries/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2023/05/2dc7106c4835410a88bfe8ee031423cb.jpg?imageView2/1/w/1080/h/721/format/jpg" alt="《八九中国民运报章广告专辑》。摄：林振东/端传媒" itemprop="contentUrl" referrerpolicy="no-referrer"></a>
 <figcaption itemprop="caption">《八九中国民运报章广告专辑》。摄：林振东/端传媒</figcaption></figure><p><small class="u-font-sans">本刊载内容版权为端传媒或相关单位所有，未经<a href="mailto:editor@theinitium.com" target="_blank">端传媒编辑部</a>授权，请勿转载或复制，否则即为侵权。</small></p>
