--- a/_posts/2023-05-22-INMEDIA-疫情禁酒令兩酒吧負責人上訴得直-判囚9周減至2周及3周.html
+++ b/_posts/2023-05-22-INMEDIA-疫情禁酒令兩酒吧負責人上訴得直-判囚9周減至2周及3周.html
@@ -8,7 +8,7 @@ tags: blog
 author: 獨媒報導
 ---
 
-<img src="https://www.inmediahk.net/files/column_images/heavy.jpg" /><div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even"><p><font color="#e4692b">【獨媒報導】</font>政府在疫情期間禁止酒吧營業，尖沙咀 Virgo 酒吧爆發群組後，被揭發違反599章經營，酒吧負責人被捕後稱2019年有「暴徒搞事」生意難做，故「博一博」。酒吧董事及經理早前在審訊後被裁定「限酒令」罪成，是首宗同類定罪案件，兩人在裁判法院被判囚9個星期監禁。兩人提出上訴，高等法院今頒下判詞，兩人成功獲減刑，董事只囚3周，經理則囚2周。</p>
+<img src="https://www.inmediahk.net/files/column_images/heavy.jpg" /><div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even"><p><font color="#e4692b">【獨媒報導】</font>政府在疫情期間禁止酒吧營業，尖沙咀 Virgo 酒吧爆發群組後，被揭發違反599章經營，酒吧負責人被捕後稱2019年有「暴徒搞事」生意難做，故「博一博」。酒吧董事及經理早前在審訊後被裁定「禁酒令」罪成，是首宗同類定罪案件，兩人在裁判法院被判囚9個星期監禁。兩人提出上訴，高等法院今頒下判詞，兩人成功獲減刑，董事只囚3周，經理則囚2周。</p>
 <p>上訴人分別是「Virgo」酒吧的董事林鉑泓及經理吳騰，兩人早前被裁判法院獲准保釋等候上訴。根據案情，林鉑泓被捕後稱「我間酒吧有賣酒又有賣嘢食畀客，我都唔知違反咗法例」；吳騰則在被捕後稱「上年6月啲暴徒又搞事，生意已經好差，業主又唔肯減租，依家又加‍埋疫情又停咗好多日，生意難做，無糧出手停口‍停，所以先博一博」。「Virgo」位於尖沙咀華懋金馬倫中心。</p>
 <p><strong>稱「暴徒搞事」加疫情令生意難做</strong></p>
 <p>原審裁判官曾在裁決時指出，599F章《預防及控制疾病（規定及指示）（業務及處所）規例》下，兩被告僅可以依賴「合理辯解」，兩被告稱是「誤會」條例規定，惟吳騰被捕後的說法，顯示不是不了解法例，而是希望以「博一博」的方式去經營，林鉑泓更直以「酒吧」稱呼「Virgo」，證明他根本沒有誤會上址不用關閉。</p>
