--- a/_posts/2023-05-22-INMEDIA-立會傾禁餵野鴿變-保育-高球場-林健鋒質疑-做咩拆貓頭鷹屋企.html
+++ b/_posts/2023-05-22-INMEDIA-立會傾禁餵野鴿變-保育-高球場-林健鋒質疑-做咩拆貓頭鷹屋企.html
@@ -15,7 +15,7 @@ author: 獨媒報導
 <p>立法會環境事務委員會今午本來討論政府計劃修訂《野生動物保護條例》，將全港性禁餵野鴿，並將非法餵飼野生動物和野鴿的最高罰款，由現時1萬元，提高至10萬元及監禁1年。政府亦計劃引入定額罰款5,000元機制，簡化執法程序並提高阻嚇力。</p>
 <p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/33J063U0v7" title="林健鋒"><img src="https://live.staticflickr.com/65535/52916913673_7830806314_b.jpg" width="1024" alt="林健鋒" /></a><br /><em>林健鋒</em></p>
 <p><strong>林健鋒稱親身視察 目擊貓頭鷹家庭</strong></p>
-<p>但林健鋒就提出，保育野生動物「更好方法」是保育棲生地，他舉例有新聞報導指粉嶺高球場找到「貓頭鷹、豹貓及蝙蝠」等野生動物，更指上周六親身視察發現「好易搵到」，不止發現一隻，更發現「好多家庭，好多bb貓頭鷹」。他稱球場提供了很好的棲身環境，炮轟替政府做環評報告的公司，制作的報告與事實不符，質疑政府不應花數千萬予環評公司是「不值得」。林健鋒又表示，「人哋好好地生活，你做咩要拆人哋屋企啫？」</p>
+<p>但林健鋒就提出，保育野生動物「更好方法」是保育棲生地，他舉例有新聞報導指粉嶺高球場找到「貓頭鷹、豹貓及蝙蝠」等野生動物，更指上周六親身視察發現「好易搵到」，不止發現一隻，更發現「好多家庭，好多bb貓頭鷹」。他稱球場提供了很好的棲身環境，炮轟替政府做環評報告的公司，制作的報告與事實不符，認為花數千萬予環評公司是「不值得」。林健鋒又表示，「人哋好好地生活，你做咩要拆人哋屋企啫？」</p>
 <p>雖然林健鋒的提問離題，但委員會主席、民建聯葛珮帆未有制止。環境及生態局副局長黃淑嫻回應指，當局鼓勵人類不要餵飼，讓動物返回大自然，她指若是受保護動物，會呼籲市民「唔好搞巢，唔好搞蛋」，若不是受保護動物如野豬，政府會在植樹計劃種植原生植物，為野豬提供天然食物。</p>
 <p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/7dMz99vQR5" title="DSC_4007"><img src="https://live.staticflickr.com/65535/52916458226_8dfeb2b621_b.jpg" width="1024" alt="DSC_4007" /></a><br /><em>環境及生態局副局長黃淑嫻</em></p>
 <p><strong>林新強稱馬騮野豬馬路集結</strong></p>
