--- a/_posts/2023-05-19-INITIUM-中国热播剧-漫长的季节-东北三省-天鹅绒式-的伤害-那些被社会抛弃的人.html
+++ b/_posts/2023-05-19-INITIUM-中国热播剧-漫长的季节-东北三省-天鹅绒式-的伤害-那些被社会抛弃的人.html
@@ -5,10 +5,10 @@ date: 2023-05-19 20:25:00.000000000 +00:00
 link: https://theinitium.com/article/20230520-culture-the-long-season-china-east-north-area-fate/
 categories: initium
 tags: blog
-author: 
+author: 特约撰稿人 林克
 ---
 
-<p>「在东北，真正的内伤、焦虑与抑郁，这是改革开放集体遗留的伤痕？」</p><figure class="image" itemscope itemtype="https://schema.org/ImageObject"><a class="image" href="https://theinitium.com/article/20230520-culture-the-long-season-china-east-north-area-fate/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2023/05/389b1fd1d22e4b538afc3499dee56574.jpg?imageView2/1/w/1080/h/720/format/jpg" alt="《漫长的季节》剧照。图：网上图片" itemprop="contentUrl" referrerpolicy="no-referrer"></a>
+<p>「在东北，真正的内伤、焦虑与抑郁，这是改革开放集体遗留的伤痕？」</p><p>特约撰稿人 林克</p><figure class="image" itemscope itemtype="https://schema.org/ImageObject"><a class="image" href="https://theinitium.com/article/20230520-culture-the-long-season-china-east-north-area-fate/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2023/05/389b1fd1d22e4b538afc3499dee56574.jpg?imageView2/1/w/1080/h/720/format/jpg" alt="《漫长的季节》剧照。图：网上图片" itemprop="contentUrl" referrerpolicy="no-referrer"></a>
             <figcaption itemprop="caption">《漫长的季节》剧照。图：网上图片<span class="credit"></span></figcaption></figure><p>“这个故事如果用美素的视角来拍，呈现出来的东西和现在的版本没有区别，我觉得它才能算得上是一部真正的好剧。”五月的某天晚上，我和一位友人谈及中国热播剧《漫长的季节》，她做出了这样一个评价。这部剧集在豆瓣网上被50多万用户标记，评分一度高达9.5，是近五年来中国国产剧的高峰，也被业内人士视为本年度的现象级作品。</p>
 <p>与前阵子上线的另一部网络剧《平原上的摩西》类似，《漫长的季节》是一部以东北下岗潮为背景的作品，二者在很多地方都有着微妙的互文关系：例如前者由双雪涛的原著小说改编，后者则由作家班宇担任文学策划，两人正好被视为“东北文艺复兴”过程中最具代表性的80后作家。两个文本都涉及一个横跨十多年的凶杀案，及国企下岗带给人毁灭性的打击⋯⋯在经济改革浪潮中逐步成为失落之地的东北，在两部作品中都以某种冷峻和残酷的面貌出现，让作为奇观的凶杀成为这片大地症候的表现形式。</p>
 <blockquote>
