--- a/_posts/2023-05-20-INITIUM-如果亲密关系是一道双人谜题-他的游戏想问问你的答案.html
+++ b/_posts/2023-05-20-INITIUM-如果亲密关系是一道双人谜题-他的游戏想问问你的答案.html
@@ -5,10 +5,10 @@ date: 2023-05-20 16:59:00.000000000 +00:00
 link: https://theinitium.com/article/20230521-game-on-game-love-and-distance/
 categories: initium
 tags: blog
-author: 
+author: 特约撰稿人 杨静
 ---
 
-<p>「疫情开始那几个月很极端，我们的感情在这极端的寂寞、距离和阻碍中显得如此脆弱，不知不觉，我把这种感觉保留在我的游戏里。」</p><figure class="image" itemscope itemtype="https://schema.org/ImageObject"><a class="image" href="https://theinitium.com/article/20230521-game-on-game-love-and-distance/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2023/05/fba72adc2ef54e10a62d75ca07cb6b26.png?imageView2/1/w/1080/h/720/format/jpg" alt itemprop="contentUrl" referrerpolicy="no-referrer"></a>
+<p>「疫情开始那几个月很极端，我们的感情在这极端的寂寞、距离和阻碍中显得如此脆弱，不知不觉，我把这种感觉保留在我的游戏里。」</p><p>特约撰稿人 杨静</p><figure class="image" itemscope itemtype="https://schema.org/ImageObject"><a class="image" href="https://theinitium.com/article/20230521-game-on-game-love-and-distance/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2023/05/fba72adc2ef54e10a62d75ca07cb6b26.png?imageView2/1/w/1080/h/720/format/jpg" alt itemprop="contentUrl" referrerpolicy="no-referrer"></a>
             <figcaption itemprop="caption"><span class="credit"></span></figcaption></figure><p><small> 编者按：越来越多的人在做游戏，越来越多的游戏制作者想要表达。在工具愈发成熟、技术难度不断下降的今天，“做游戏”到底意味著什么？“做游戏”的人为什么要做游戏？游戏还可以是什么？Game On 关注上述问题的现实案例，本期我们访问专注制作探讨亲密关系话题的双人协作游戏设计师谢羿，谈谈游戏创作和情感的关系。以下是访问后整理的文字：</small></p>
 <p>我正式的名字叫谢羿，身边朋友们叫我Yi。作为游戏设计师行走江湖的时候，我还有个名字，叫做<a href="https://t3crowbarmaster.com/">T3CrowbarMaster</a>，就是“三线撬棍大师”（其实这是个梗，玩《半条命》的玩家也许会懂，我先不解释，大家心照不宣）。我热爱制作双人游戏，想要探索两个玩家之间的亲密关系、和亲密互动，我也关注怎么在双人游戏中模拟、重现、刺激和（也许）改变现实生活中的亲密关系。</p>
 <h3>在加州误入正途</h3>
