--- a/_posts/2023-05-20-INITIUM-未讲完的故事和异乡人的自我确认-纪念万玛才旦.html
+++ b/_posts/2023-05-20-INITIUM-未讲完的故事和异乡人的自我确认-纪念万玛才旦.html
@@ -5,10 +5,10 @@ date: 2023-05-20 19:49:00.000000000 +00:00
 link: https://theinitium.com/article/20230521-strangers-pad-ma-tshe/
 categories: initium
 tags: blog
-author: 
+author: 侯奇江
 ---
 
-<p>「藏地的发展和变化还会继续，我这个异乡人借万玛才旦的作品做了几次回家的梦。」</p><figure class="image" itemscope itemtype="https://schema.org/ImageObject"><a class="image" href="https://theinitium.com/article/20230521-strangers-pad-ma-tshe/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2023/05/fffc7a8e140d4e8b8b6e9dca0491fff3.jpg?imageView2/1/w/1080/h/720/format/jpg" alt="藏族导演万玛才旦于5月8日过世，享年53岁。 摄：林振东/端传媒" itemprop="contentUrl" referrerpolicy="no-referrer"></a>
+<p>「藏地的发展和变化还会继续，我这个异乡人借万玛才旦的作品做了几次回家的梦。」</p><p>侯奇江</p><figure class="image" itemscope itemtype="https://schema.org/ImageObject"><a class="image" href="https://theinitium.com/article/20230521-strangers-pad-ma-tshe/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2023/05/fffc7a8e140d4e8b8b6e9dca0491fff3.jpg?imageView2/1/w/1080/h/720/format/jpg" alt="藏族导演万玛才旦于5月8日过世，享年53岁。 摄：林振东/端传媒" itemprop="contentUrl" referrerpolicy="no-referrer"></a>
             <figcaption itemprop="caption">藏族导演万玛才旦于5月8日过世，享年53岁。 摄：林振东/端传媒<span class="credit"></span></figcaption></figure><p><strong>特约撰稿人，侯奇江</strong></p>
 <p>在北京从事影视行业的好友给我发来万玛才旦去世的消息时，我正在办公室的工位上打瞌睡。我半信半疑地开始在微博搜索，希望找到辟谣的消息澄清误会。但随着越来越多的媒体发讣告，巨大的哀伤冲散我的困意，我去公司的卫生间扣上马桶盖坐了好一会儿，脑子里嗡嗡地回想才读过不久的他的小说集，《故事只讲了一半》。</p>
 <p>万玛才旦是一位作家和导演，1969年出生于青海海南藏族自治州。他不但用藏汉双语写小说，也因他在藏语母语电影的成就，和对藏族主创团队、藏语创作的培养和扶持，而被认为是中国百年影史藏族母语电影的开创者。他与被他所影响的一代电影人产生了一种新的电影类型，被称为“藏地电影新浪潮”（又做“西藏新浪潮”）。去世时他53岁，仍然活跃在创作一线。</p>
