--- a/_posts/2023-05-21-INITIUM-图书馆没有的-禁书-藏身在香港人家中书柜.html
+++ b/_posts/2023-05-21-INITIUM-图书馆没有的-禁书-藏身在香港人家中书柜.html
@@ -5,10 +5,10 @@ date: 2023-05-21 14:59:00.000000000 +00:00
 link: https://theinitium.com/article/20230522-photo-hongkong-books-removed-from-libraries/
 categories: initium
 tags: blog
-author: 
+author: 端传媒摄影组 记者郑淑华、李慧筠 发自新加坡
 ---
 
-<p>「仍然安放在柜里、桌上和床底一角的书本，在短短几年之间突然成为了“禁书”。」</p><figure class="image" itemscope itemtype="https://schema.org/ImageObject"><a class="image" href="https://theinitium.com/article/20230522-photo-hongkong-books-removed-from-libraries/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2023/05/80c2c2692382469c95785adb81683ef9.jpg?imageView2/1/w/1080/h/721/format/jpg" alt="尊子《生抽香港》与《老抽中国》。摄：林振东/端传媒" itemprop="contentUrl" referrerpolicy="no-referrer"></a>
+<p>「仍然安放在柜里、桌上和床底一角的书本，在短短几年之间突然成为了“禁书”。」</p><p>端传媒摄影组 记者郑淑华、李慧筠 发自新加坡</p><figure class="image" itemscope itemtype="https://schema.org/ImageObject"><a class="image" href="https://theinitium.com/article/20230522-photo-hongkong-books-removed-from-libraries/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2023/05/80c2c2692382469c95785adb81683ef9.jpg?imageView2/1/w/1080/h/721/format/jpg" alt="尊子《生抽香港》与《老抽中国》。摄：林振东/端传媒" itemprop="contentUrl" referrerpolicy="no-referrer"></a>
             <figcaption itemprop="caption">尊子《生抽香港》与《老抽中国》。摄：林振东/端传媒<span class="credit"></span></figcaption></figure><p><strong>（端传媒摄影组 记者郑淑华、李慧筠 发自新加坡）</strong></p>
 <p>香港政治漫画家尊子于《明报》的漫画专栏停刊后，传媒陆续发现公共图书馆已经下架不少涉及政治人物、学者和传媒人的书籍及馆藏。除了尊子的漫画集外，下架书还包括已故民主派元老司徒华、已故著名历史学家余英时、前立法会议员及大律师吴霭仪、资深传媒人区家麟和谭蕙芸等的著作，甚至涉及非政治性书籍。</p>
 <p>除部分书籍下架外，记者于5月21日在图书馆网页搜索司徒华、吴霭仪、区家麟、岭南大学文化研究系前客席副教授许宝强、中国大陆作家许知远等名字，均没有其著作的搜索结果。</p>
