--- a/_posts/2023-05-22-INITIUM-泰国大选-反对派大胜-泰国的外交政策会否大逆转.html
+++ b/_posts/2023-05-22-INITIUM-泰国大选-反对派大胜-泰国的外交政策会否大逆转.html
@@ -5,10 +5,10 @@ date: 2023-05-22 02:51:00.000000000 +00:00
 link: https://theinitium.com/article/20230523-international-move-forward-wins-in-thailand-will-change-asia/
 categories: initium
 tags: blog
-author: 
+author: 周浩霖
 ---
 
-<p>「如果前进党上台，将改变巴育执政时期的亲中国、亲缅甸军方政策。」</p><figure class="image" itemscope itemtype="https://schema.org/ImageObject"><a class="image" href="https://theinitium.com/article/20230523-international-move-forward-wins-in-thailand-will-change-asia/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2023/05/ac933277b4b24874861a692444e720d8.jpg?imageView2/1/w/1080/h/720/format/jpg" alt="2023年5月15日，前进党领袖兼总理候选人皮塔在泰国曼谷庆祝该党的胜选。摄：Jorge Silva/Reuters/达志影像" itemprop="contentUrl" referrerpolicy="no-referrer"></a>
+<p>「如果前进党上台，将改变巴育执政时期的亲中国、亲缅甸军方政策。」</p><p>特约撰稿人 周浩霖 发自曼谷</p><figure class="image" itemscope itemtype="https://schema.org/ImageObject"><a class="image" href="https://theinitium.com/article/20230523-international-move-forward-wins-in-thailand-will-change-asia/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2023/05/ac933277b4b24874861a692444e720d8.jpg?imageView2/1/w/1080/h/720/format/jpg" alt="2023年5月15日，前进党领袖兼总理候选人皮塔在泰国曼谷庆祝该党的胜选。摄：Jorge Silva/Reuters/达志影像" itemprop="contentUrl" referrerpolicy="no-referrer"></a>
             <figcaption itemprop="caption">2023年5月15日，前进党领袖兼总理候选人皮塔在泰国曼谷庆祝该党的胜选。摄：Jorge Silva/Reuters/达志影像<span class="credit"></span></figcaption></figure><p><strong>（周浩霖，游走台湾、东南亚的记者）</strong></p>
 <p>经过上周末戏剧性的议会选举后，支持和反对军方的政党开始争夺谁将组成泰国下一届政府。这次大选举足轻重，因为来届政府的组成，将决定泰国在中美博弈之中的定位。现时，年轻泰国人支持的进步改革派政党“前进党”（Move Forward），以及与流亡总理他信家族领导的重量级反对党“为泰党”（Pheu Thai）大捷－－前进党赢得了下议院500个席位中的152个，而为泰党则赢得了141个。这次反对派大胜，对当权近十年的政府以及建制派是重重一击。</p>
 <p>上议院全部议员由军方任命，并且有权投票决定谁在两院获得大多数，成为首相。所以反对派在筹组政府之路还是困难重重。而且军方过去有用各种方法取消反对派议员资格和解散政党的前科。但许多外交官和专家估计，此次如果军方干预选举结果，很可能会引发大规模公众反弹。</p>
