--- a/_posts/2023-05-24-INITIUM-现场-打工博物馆的最后一夜-没有我们的历史-就没有我们的未来.html
+++ b/_posts/2023-05-24-INITIUM-现场-打工博物馆的最后一夜-没有我们的历史-就没有我们的未来.html
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: "[现场]打工博物馆的最后一夜：没有我们的历史，就没有我们的未来"
+title: "【现场】打工博物馆的最后一夜：没有我们的历史，就没有我们的未来"
 date: 2023-05-24 01:59:00.000000000 +00:00
 link: https://theinitium.com/article/20230524-mainland-migrant-workers-museum-shutdown/
 categories: initium
