--- a/_posts/2023-05-23-PQ-wha拒台灣記者領採訪證-外交部-中國蠻橫施壓.html
+++ b/_posts/2023-05-23-PQ-wha拒台灣記者領採訪證-外交部-中國蠻橫施壓.html
@@ -12,7 +12,7 @@ author: 林志鴻
 
 
 
-<div class="wp-block-image"><figure class="aligncenter size-large"><img src="https://storage.googleapis.com/stateless-34-84-11-249/2023/05/ef38a5f3-1920-1024x767.jpg" alt="" class="wp-image-137480" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2023/05/ef38a5f3-1920-1024x767.jpg 1024w, https://storage.googleapis.com/stateless-34-84-11-249/2023/05/ef38a5f3-1920-300x225.jpg 300w, https://storage.googleapis.com/stateless-34-84-11-249/2023/05/ef38a5f3-1920-768x576.jpg 768w, https://storage.googleapis.com/stateless-34-84-11-249/2023/05/ef38a5f3-1920-1536x1151.jpg 1536w, https://storage.googleapis.com/stateless-34-84-11-249/2023/05/ef38a5f3-1920.jpg 1920w" sizes="(max-width: 1024px) 100vw, 1024px" /><figcaption>台灣媒體日前申請今年世界衛生大會採訪許可並獲得批准，但今日上午前往聯合國日內瓦辦事處領取採訪證卻遭拒絕。聯合國工作人員表示，幾天前收到中國施壓不得放行台灣記者／圖：台灣基進提供。</figcaption></figure></div>
+<div class="wp-block-image"><figure class="aligncenter size-large"><img loading="lazy" src="https://storage.googleapis.com/stateless-34-84-11-249/2023/05/ef38a5f3-1920-1024x767.jpg" alt="" class="wp-image-137480" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2023/05/ef38a5f3-1920-1024x767.jpg 1024w, https://storage.googleapis.com/stateless-34-84-11-249/2023/05/ef38a5f3-1920-300x225.jpg 300w, https://storage.googleapis.com/stateless-34-84-11-249/2023/05/ef38a5f3-1920-768x576.jpg 768w, https://storage.googleapis.com/stateless-34-84-11-249/2023/05/ef38a5f3-1920-1536x1151.jpg 1536w, https://storage.googleapis.com/stateless-34-84-11-249/2023/05/ef38a5f3-1920.jpg 1920w" sizes="(max-width: 1024px) 100vw, 1024px" /><figcaption>台灣媒體日前申請今年世界衛生大會採訪許可並獲得批准，但今日上午前往聯合國日內瓦辦事處領取採訪證卻遭拒絕。聯合國工作人員表示，幾天前收到中國施壓不得放行台灣記者／圖：台灣基進提供。</figcaption></figure></div>
 
 
 
