--- a/_posts/2023-05-23-VOCUS-人+性大不同-日本篇-日本人的性.html
+++ b/_posts/2023-05-23-VOCUS-人+性大不同-日本篇-日本人的性.html
@@ -47,4 +47,4 @@ author: 陸坡 (LUPO)
 <div class="draft-block draft--p left">而某方面《人+性大不同：日本篇》集中於介紹異性戀的性，也有顧及到男女，講述男女優、男公關等。但對於第三性LGBT的性產業描述卻是完全沒有的。可以說是滿可惜的一點，但也好在沒有如果有相關的主題，大概今天節目就不只有保守與自由談論性的爭吵那麼簡單，而變成全面性不同性向性別的大混戰，對於韓國來說這樣的性向都不太能接受的情況下談論該族群的性，恐怕也難以有好的評價。</div>
 <div class="draft-block draft--p left">整體來說除了自己不太喜歡韓式節目的笑點與梗外，整體節目很適合打發時間或配飯，而且在公眾場合觀看，除了玩具可能太過於情色外也不太會有過於尷尬的狀況發生。對於男女學生或年輕人來說，也是不錯對於性知識的入門。</div>
 <div class="draft-block draft--p left">關於男女優訪談是否有美化的說法，短暫待過的我認為其實裡面說的事實，但大實話業界是不會在公開場合說得，一些事情就隨著產業保留在心裡吧。</div>
-<div><iframe allowfullscreen src="https://www.youtube.com/embed/LcgqS7TAvdY"></div>
+<div><iframe allowfullscreen src="https://www.youtube.com/embed/LcgqS7TAvdY"></iframe></div>
