--- a/_posts/2023-05-24-VOCUS-湯道-享受泡湯的百種方法.html
+++ b/_posts/2023-05-24-VOCUS-湯道-享受泡湯的百種方法.html
@@ -47,4 +47,4 @@ author: 陸坡 (LUPO)
 <figure class="draft--imgNormal draft-block"><div><img data-src="https://images.vocus.cc/1413592f-052b-414a-920a-beece3a53353.jpg" data-width="1200" data-height="869" data-position="center" src="https://images.vocus.cc/1413592f-052b-414a-920a-beece3a53353.jpg" referrerpolicy="no-referrer"><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div></figure>
 <div class="draft-block draft--p left">整體來說如果對於泡湯和日本文化有興趣的人，可以當成一部成本不高的錢湯推廣片，並且如果有泡湯經驗的人，應該會對裡面的場景和規矩等不陌生，過去曾經跟人去京都、東京等地方住宅區的錢湯，電影中的風情立刻讓我有回到那一刻的記憶，充滿懷念感。但以電影來說，實在是除了賣情懷外，又是老生常談和各種說教場面，這點實在讓人吃不消。</div>
 <div class="draft-block draft--p left">《湯道》在日本評價普普，雖然很多觀眾可以理解錢湯文化的重要性，但是很多人覺得裡面有些情緒渲然太過於誇張，雖然理解導演編劇想要誇張的笑點來詮釋，但整體來說太過於老派。不過有滿多觀眾看完覺得滿想去泡湯和洗一次溫泉的，有這樣的想法也算是《湯道》電影的成功吧？</div>
-<div><iframe allowfullscreen src="https://www.youtube.com/embed/L2MrSipH97Y"></div>
+<div><iframe allowfullscreen src="https://www.youtube.com/embed/L2MrSipH97Y"></iframe></div>
